CURD_UPDATE